--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
-<html>
-  <head>
-    <link href="jogodavelha.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <h1>Jogo da velha</h1>
-    <div id="board">
-      <!-- criar 9 casinhas -->
-      <div class="casinha"></div>
-      <div class="casinha gray"></div>
-      <div class="casinha"></div>
-      <div class="casinha gray"></div>
-      <div class="casinha"></div>
-      <div class="casinha gray"></div>
-      <div class="casinha"></div>
-      <div class="casinha gray"></div>
-      <div class="casinha"></div>
-    </div>
-    <div id="vencedor"></div>
-    <script type="text/javascript" src="jogodavelha.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jogo da Velha</title>
+  <link href="jogodavelha.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+  <h1>Jogo da Velha</h1>
+  <div id="board"></div>
+  <div id="vencedor"></div>
+  <script type="text/javascript" src="jogodavelha.js"></script>
+</body>
 </html>
+
